[package]
name = "dfmodtool"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudhook = "0.6.4"
once_cell = "1.19.0"
parking_lot = "0.12.1"
windows = "0.54.0"
rfd = "0.14.0"
rand = "0.8.5"
mmap-rs = "0.6.1"

[lib]
crate_type = ["cdylib"]
name = "libdfmodtool"
