[package]
name = "dfmodtool"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.57.0"
mmap-rs = "0.6.1"
hudhook = "0.7.0"
retour = "0.3.1"
rfd = "0.14.1"
rand = "0.8.5"

[lib]
crate_type = ["cdylib"]
name = "libdfmodtool"
